custom-resource-consumers/takeout/apps/media/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-tracker
  namespace: media
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "false"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/target: ${personal_domain_ddns}
spec:
  tls:
    - hosts:
        - "bgp.${personal_domain}"
      secretName: bgp.${personal_domain}-tls
  rules:
  - host: bgp.${personal_domain}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: qbittorrent-tracker
            port:
              number: 9000
